--- a/_posts/2000-01-10-nesterov.markdown
+++ b/_posts/2000-01-10-nesterov.markdown
@@ -27,7 +27,7 @@ $$ x_{k+1} = x_k - \alpha \nabla f(x_k) $$
 
 Where $\nabla f(x_k)$ is the gradient of the function at the current value $x_k$ of the input $x$. The way the update rule is set up moves each iteration closer to where the gradient, $\nabla f(x)$, would be zero, and this is usually where either the maxima or the minima lies.
 
-Vanilla Gradient Descent (GD) is generally reliable, but it faces issues with saddle points, which are points with zero gradients, but are neither minima nor maxima. GD may also encounter large plateaus, which are often mistaken for saddle points, and can slow down convergence significantly leading to the algorithm getting stuck.
+Vanilla GD is generally reliable, but it faces issues with saddle points, which are points with zero gradients, but are neither minima nor maxima. GD may also encounter large plateaus, which are often mistaken for saddle points, and can slow down convergence significantly leading to the algorithm getting stuck.
 
 ### Nesterov's and other momentum based methods
 
@@ -60,18 +60,18 @@ $$ f(x_1,x_2) = e^{-(\frac{x_1^2}{20} + \frac{x_2^2}{5})} $$
 <br>
 
 From the definition, it is visible that $f(x_1, x_2)$ attains its minima when the exponential term is maximized, since the exponential function $e^{-x}$ decreases as $x$ increases. The exponential term 
-$-(\frac{x_1^2}{20} + \frac{x_2^2}{5})$, in turn, is maximized when $\frac{x_1^2}{20} + \frac{x_2^2}{5}$ is minimized, and the minimum value of $\frac{x_1^2}{20} + \frac{x_2^2}{5}$ is 0, which occurs at $x_1 = 0$ and $x_2 = 0$.
+$-(\frac{x_1^2}{20} + \frac{x_2^2}{5})$, in turn, is maximized when $(\frac{x_1^2}{20} + \frac{x_2^2}{5})$ is minimized, and the minimum value of $(\frac{x_1^2}{20} + \frac{x_2^2}{5})$ is $0$, which occurs at $x_1 = 0$ and $x_2 = 0$.
 
 With this knowledge, let's proceed to see how close and how quickly both methods converge to the value $(0,0)$.
 
 <center><img src="/img/nesterov.png" alt="Lane Fit"  width="700"></center>
 <br>
 
-By running the two algorithms side-by-side, we notice a few things. Firstly, NAG converges faster than GD, as expected, by a factor of approximately 10 iterations, and both methods converge within simmilar distance from $(0,0)$, both in the order of $10^{-6}$. Secondly, the path taken by NAG to reach the minima isn't straightforward like GD's. There are a lot of turns in the path, almost like the algorithm makes it go one way, rethinks, and takes a u-turn.
+By running the two algorithms side-by-side, we notice a few things. Firstly, NAG converges faster than GD, as expected, by a factor of approximately 10 iterations, and both methods converge within simmilar distance from $(0,0)$, both in the order of $10^{-6}$. Secondly, the path taken by NAG to reach the minima isn't straightforward like GD's. There are a lot of turns in the path, almost like the algorithm makes it go one way, rethinks, and makes it take a "u-turn".
 
 The explanation for this is that NAG considers the gradient at a future point, and not at the current point, unlike regular momentum-based methods, which allows NAG to adjust its course more frequently, leading to the observed "u-turns" and sudden changes in direction. These adjustments are a result of the algorithm constantly reassessing the path based on both the current gradient and the expected future gradient. This is why NAG can converge faster and more efficiently navigate complex terrains in the optimization landscape compared to the more straightforward but potentially less adaptive path of simple momentum-based and even GD methods.
 
-The intensity of these u-turns can be minimized by carefully tuning the momentum parameter. If the momentum is set too high, the algorithm may overshoot and make larger, more frequent adjustments, but will expedite the convergence. Conversely, a lower momentum value can help smooth out the path by reducing the abrupt changes in direction, leading to a more stable yet slower convergence. Proper tuning would ensure that NAG maintains its efficiency advantage while mitigating excessive oscillations.
+The intensity of these "u-turns" can be minimized by carefully tuning the momentum parameter. If the momentum is set too high, the algorithm may overshoot and make larger, more frequent adjustments, but will expedite the convergence. Conversely, a lower momentum value can help smooth out the path by reducing the abrupt changes in direction, leading to a more stable yet slower convergence. Proper tuning would ensure that NAG maintains its efficiency advantage while mitigating excessive oscillations.
 
 ### Conclusion
 
