--- a/_posts/2000-01-10-nesterov.markdown
+++ b/_posts/2000-01-10-nesterov.markdown
@@ -3,7 +3,7 @@ layout: post
 title:  Nesterov's Accelerated Gradient Descent
 permalink: /nesterov/
 date:   2024-05-01
-image:  rift.png
+image:  nesterov_3d.png
 tags:   [Optimization]
 ---
 ## Nesterov's Accelerated Gradient Descent Method
